@@ -102,17 +102,19 @@ String Navigator::appName() const
 
 // If this function returns true, we need to hide the substring "4." that would otherwise
 // appear in the appVersion string. This is to avoid problems with old versions of a
-// library called OpenCube QuickMenus, which as of this writing is still being used on
+// library called OpenCube QuickMenu, which as of this writing is still being used on
 // sites such as nwa.com -- the library thinks Safari is Netscape 4 if we don't do this!
 static bool shouldHideFourDot(Frame* frame)
 {
     const String* sourceURL = frame->script()->sourceURL();
     if (!sourceURL)
         return false;
+    if (!(sourceURL->endsWith("/dqm_script.js") || sourceURL->endsWith("/dqm_loader.js")))
+        return false;
     Settings* settings = frame->settings();
     if (!settings)
         return false;
-    return sourceURL->endsWith("/dqm_script.js") && settings->needsSiteSpecificQuirks();
+    return settings->needsSiteSpecificQuirks();
 }
 
 String Navigator::appVersion() const
